[tool.poetry]
name = "adb-prometheus-exporter"
version = "0.1.0"
description = ""
authors = ["Fedor Borshev <fedor@borshev.com>"]
readme = "README.md"


[tool.ruff]
line-length = 160

[tool.poetry.dependencies]
python = "^3.12"
prometheus-client = "^0.21.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
ruff = "^0.8.5"
watchdog = {extras = ["watchmedo"], version = "^6.0.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
